; ModuleID = '/home/carl/AnghaBench/postgres/src/backend/utils/mb/extr_encnames.c_pg_valid_server_encoding.c'
source_filename = "/home/carl/AnghaBench/postgres/src/backend/utils/mb/extr_encnames.c_pg_valid_server_encoding.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i32 @pg_valid_server_encoding(i8* %0) #0 {
  %2 = alloca i32, align 4
  %3 = alloca i8*, align 8
  %4 = alloca i32, align 4
  store i8* %0, i8** %3, align 8
  %5 = load i8*, i8** %3, align 8
  %6 = call i32 @pg_char_to_encoding(i8* %5)
  store i32 %6, i32* %4, align 4
  %7 = icmp slt i32 %6, 0
  br i1 %7, label %8, label %9

8:                                                ; preds = %1
  store i32 -1, i32* %2, align 4
  br label %16

9:                                                ; preds = %1
  %10 = load i32, i32* %4, align 4
  %11 = call i32 @PG_VALID_BE_ENCODING(i32 %10)
  %12 = icmp ne i32 %11, 0
  br i1 %12, label %14, label %13

13:                                               ; preds = %9
  store i32 -1, i32* %2, align 4
  br label %16

14:                                               ; preds = %9
  %15 = load i32, i32* %4, align 4
  store i32 %15, i32* %2, align 4
  br label %16

16:                                               ; preds = %14, %13, %8
  %17 = load i32, i32* %2, align 4
  ret i32 %17
}

declare dso_local i32 @pg_char_to_encoding(i8*) #1

declare dso_local i32 @PG_VALID_BE_ENCODING(i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
